# pix2image

./: .gitignore  CMakeLists.txt  CMakeLists.txt~  image_00001.tiff  image_00002.tiff  pix2image  pix2image.cpp  pix2image.cpp~  pix2imageexe  readme.md
include/: pix2image.h  pix2image.h~
